# KEA_SystemIntegration

./: .gitignore  README.md
00._Assignments/02._Data_Parsing_Server/: main.py  pyproject.toml
01._Introduction/: paymentiframe.html
01._Introduction/01A._Data_Parsing_Servers/: data_parser.py
02._Text-based-Data_Formats/: me.csv  me.json  me.xml  me.yaml
02._Text_based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/encoding/: encode.py
03._Modules/html_classic/: index.html  index.js  myModule.js
03._Modules/html_esmodules/: index.js
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/node_esmodules/: index.js  myModule.js
03._Modules/python_main/: potential_library.py
03._Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virutal_Environments/01._venv/: main.py
05._Python_Virutal_Environments/03._poetry/: main.py  pyproject.toml
06._Simple_Servers/01._node/: app.js  package.json
06._Simple_Servers/02._python/: main.py  pyproject.toml
08._Server-Server/01._node/: app.js
08._Server-Server/02._python/: main.py  (+1 more)
14._WebSockets/02._python_plain/: client.py  pyproject.toml  server.py
17._Database_Migrations/02._python_alembic/: alembic.ini  pyproject.toml
17._Database_Migrations/02._python_alembic/alembic/versions/: 0fbaa52fb4c8_create_accounts_table.py
18_CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package.json
23._Embedded_YT/: index.html
(+123 files in other folders)
