[project]
name = "02-python-plain"
version = "0.1.0"
description = ""
authors = [
    {name = "danieljappe",email = "daniel.petersen@student.fontys.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
